--- a/gradle-baseline-java/build.gradle
+++ b/gradle-baseline-java/build.gradle
@@ -88,6 +88,10 @@ gradlePlugin {
             id = 'com.palantir.baseline-enable-preview-flag'
             implementationClass = 'com.palantir.baseline.plugins.BaselineEnablePreviewFlag'
         }
+        baselinePreferProjectModules {
+            id = 'com.palantir.baseline-prefer-project-modules'
+            implementationClass = 'com.palantir.baseline.plugins.BaselinePreferProjectModules'
+        }
     }
 }
 
